// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple dependency tree should not output warnings if not strict 1`] = `
"a
[0m  Multiple versions of [0m[32m[1ma[22m[39m[37m found:[39m
[37m[39m    [32m[1m1.0.0[22m[39m [37m[1m./~/a[22m[39m
    [32m[1m2.0.0[22m[39m [37m[1m./~/b/~/a[22m[39m
"
`;

exports[`Simple dependency tree should not output warnings if not strict 2`] = `
"b
[0m  Multiple versions of [0m[32m[1mb[22m[39m[37m found:[39m
[37m[39m    [32m[1m1.0.0[22m[39m [37m[1m./~/b[22m[39m
    [32m[1m2.0.0[22m[39m [37m[1m./~/c/~/a/~/b[22m[39m

[37m[1mCheck how you can resolve duplicate packages: [22m[39m
https://github.com/darrenscerri/duplicate-package-checker-webpack-plugin#resolving-duplicate-packages-in-your-bundle
"
`;

exports[`Simple dependency tree should output warnings if strict 1`] = `
"a
[0m  Multiple versions of [0m[32m[1ma[22m[39m[37m found:[39m
[37m[39m    [32m[1m1.0.0[22m[39m [37m[1m./~/a[22m[39m
    [32m[1m2.0.0[22m[39m [37m[1m./~/b/~/a[22m[39m
    [32m[1m2.5.0[22m[39m [37m[1m./~/c/~/a[22m[39m
"
`;

exports[`Simple dependency tree should output warnings if strict 2`] = `
"b
[0m  Multiple versions of [0m[32m[1mb[22m[39m[37m found:[39m
[37m[39m    [32m[1m1.0.0[22m[39m [37m[1m./~/b[22m[39m
    [32m[1m2.0.0[22m[39m [37m[1m./~/c/~/a/~/b[22m[39m

[37m[1mCheck how you can resolve duplicate packages: [22m[39m
https://github.com/darrenscerri/duplicate-package-checker-webpack-plugin#resolving-duplicate-packages-in-your-bundle
"
`;
